* [Bug 1063] ntpSnmpSubagentObject.h is missing from the distribution.
(4.2.5p129) 2008/09/11 Released by Harlan Stenn <stenn@ntp.org>
* Quiet some libntpq-related warnings.
(4.2.5p128) 2008/09/08 Released by Harlan Stenn <stenn@ntp.org>
* Import Heiko Gerstung's GSoC2008 NTP MIB daemon.
(4.2.5p127) 2008/09/01 Released by Harlan Stenn <stenn@ntp.org>
* Regenerate ntpd/ntp_parser.c
(4.2.5p126) 2008/08/31 Released by Harlan Stenn <stenn@ntp.org>
* Stop libtool-1.5 from looking for C++ or Fortran.
* [BUG 610] Documentation update for NMEA reference clock driver.
* [Bug 828] Fix IPv4/IPv6 address parsing.
* Changes from Dave Mills:
  Documentation updates.
  Fix a corner case where a frequency update was reported but not set.
  When LEAP_NOTINSYNC->LEAP_NOWARNING, call crypto_update() if we have
  crypto_flags.
(4.2.5p125) 2008/08/18 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1052] Add linuxPPS support to ONCORE driver.
(4.2.5p124) 2008/08/17 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* Include (4.2.4p5) 2008/08/17 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 861] leap info was not being transmitted.
* [Bug 1046] refnumtoa.c is using the wrong header file.
* [Bug 1047] enable/disable options processing fix.
* header file cleanup.
* [Bug 1037] buffer in subroutine was 1 byte short.
* configure.ac: cleanup, add option for wintime, and lay the groundwork
  for the changes needed for bug 1028.
* Fixes from Dave Mills: 'bias' and 'interleave' work.  Separate
  phase and frequency discipline (for long poll intervals).  Update
  TAI function to match current leapsecond processing.
* Documentation updates from Dave Mills.
* [Bug 1037] Use all 16 of the MD5 passwords generated by ntp-keygen.
* Fixed the incorrect edge parameter being passed to time_pps_kcbind in
  NMEA refclock driver.
* [Bug 399] NMEA refclock driver does not honor time1 offset if flag3 set.